--- a/leadmanager/frontend/package.json
+++ b/leadmanager/frontend/package.json
@@ -7,11 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
     "vite": "^2.6.4"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
