--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ djangorestframework = "*"
 django-rest-knox = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3"
+
+[pipenv]
+allow_prereleases = true
