--- a/leadmanager/frontend/package.json
+++ b/leadmanager/frontend/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
